--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "bpg-arial",
-  "description": "BPG Arial Web Font",
+  "description": "BPG Arial Web-Font Package",
+  "version": "1.0.0",
   "keywords": ["ttf", "woff", "woff2", "svg", "font", "web-font", "bpg-arial"],
   "main": [
     "css/bpg-arial.css"
@@ -13,7 +14,7 @@
     "type": "git",
     "url": "https://github.com/web-fonts/bpg-arial.git"
   },
-  "license": "MIT",
+  "license": ["MIT", "CC-BY-NC-ND-4.0"],
   "ignore": [
     "**/.*",
     "node_modules",
